--- a/README.org
+++ b/README.org
@@ -21,6 +21,7 @@ Finally, copy the dotfiles to your home directory.
     - [[https://hunspell.github.io/][Hunspell]]
     - [[https://x.org/][xprop]]
     - [[https://www.fsd.it/shop/fonts/pragmatapro/][PragmataPro Mono]] or [[https://adobe-fonts.github.io/source-code-pro/][Source Code Pro]]
+  - X window manager: [[https://x.org/][xrandr]]
   - Terminal emulator:
     - [[https://cmake.org/][CMake]], [[https://www.gnu.org/software/libtool/][libtool]] and [[https://github.com/neovim/libvterm][libvterm]]
   - E-mail client:
@@ -73,6 +74,9 @@ To install dependencies on Arch Linux, run:
 
   # Install PragmataPro Mono or
   pacman -S adobe-source-code-pro-fonts
+
+  ## X window manager
+  pacman -S xorg-xrandr
 
   ## Terminal emulator
   pacman -S cmake libtool libvterm
